[package]
name = "encue"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Bronson Jordan"]
description = "A TUI program for running theater sound cues"
readme = "README.md"
repository = "https://github.com/bpjordan/encue"
homepage = "https://github.com/bpjordan/encue"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.26.1" }
itertools = { version = "0.11.0", default-features = false }
lofty = "0.15.0"
log = { version = "0.4.19", features = ["std"] }
rand = "0.8.5"
ratatui = { version = "0.22.0", features = ["serde", "macros", "time"] }
rodio = "0.17.1"
serde = { version = "1.0.174", features = ["derive"] }
serde_with = "3.1.0"
serde_yaml = "0.9.25"
thiserror = "1.0.44"
time = { version = "0.3.28", features = ["macros", "formatting"] }
tui-logger = { version = "0.9.2", default-features = false, features = ["ratatui", "ratatui-support"] }
